# Image-Classification-Python-Framework

./: .gitignore  LICENSE  MANIFEST.in  README.md  data.json  main.py  pyproject.toml  requirements.txt  setup.cfg  test.py  train.py
Classes/: DataProcessing.py  DataVisualization.py  data_processing.py  data_visualization.py  training.py
Utils/: JSON_helper.py
checkpoints/20210811-095701/: cp.ckpt.index
configs/: model.py  test.json  train.json
core/: data_processing.py  data_visualization.py  network_architecture.py  test_worker.py  train_worker.py
image_classification/: requirements.txt  setup.py  test.py  train.py
image_classification/core/: data_processing.py  network_architecture.py  test_worker.py  train_worker.py
image_classification/image_classification/: __init__.py  aug.py  data.json  temporary.py  test.py  train.py
image_classification/image_classification/builders/: aug_builder.py  network_builder.py  test_builder.py  train_builder.py
image_classification/image_classification/core/: augmentations.py  confusion_matrix.py  data_generator.py  data_processing.py  data_visualization.py  image_preprocessing.py  network_architecture.py  optimizer.py  test_worker.py  train_worker.py
image_classification/image_classification/data_structures/: data_generator.py  dataset_type.py  image_loader.py  image_shape.py  point.py  ratio.py  resize_method.py
image_classification/image_classification/network/: augmentations.py  confusion_matrix.py  data_generator.py  (+5 more)
image_classification/utils/: json_helper.py
utils/: io.py  io_helper.py  json_helper.py
(+33 files in other folders)
