
[metadata]
name = image_classification
version = 0.0.1
author = none
author_email = none
description = For image dataset classification 
long_description = file: README.md
long_description_content_type = text/markdown
url = none
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True